# cntrl

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  structure.md
.claude/: settings.local.json
.github/workflows/: release-bridge.yml
apps/bridge/: index.html  package-lock.json  package.json
apps/bridge/src/: App.css  App.tsx  index.css  index.tsx  types.ts
apps/bridge/src-tauri/: Cargo.toml  tauri.conf.json
apps/bridge/src-tauri/capabilities/: default.json  desktop.json
apps/bridge/src-tauri/icons/: icon.icns
apps/bridge/src-tauri/src/: auth_scopes.rs  auth_store.rs  config.rs  lib.rs  mac_rounded_corners.rs  main.rs  tray.rs
apps/bridge/src-tauri/src/server/: gpu.rs  handlers.rs  hardware.rs  media.rs  mod.rs  process.rs  types.rs  ws.rs
apps/bridge/src-tauri/windows/: hooks.nsh
apps/bridge/src/components/: button.tsx  feature-card-min.tsx  feature-card.tsx  footer.tsx  header.tsx  hero.tsx  interval-card.tsx  label.tsx  loading.main.tsx  setting-input-card.tsx  svgs.tsx  switch.tsx
apps/bridge/src/context/: app-context.tsx
apps/bridge/src/helper/: data-helper.ts
apps/bridge/src/hooks/: use-debounce.ts
apps/bridge/src/lib/: auth.ts  backend.ts  ui-store.ts
apps/docs/: eslint.config.mjs  next.config.mjs  package.json  source.config.ts
apps/docs/content/docs/: meta.json
apps/docs/src/: mdx-components.tsx
apps/docs/src/app/: global.css  layout.tsx  robots.ts  sitemap.ts
apps/docs/src/components/: icon.tsx  posthog-provider.tsx  sidebar-badge.tsx
apps/hub/: components.json  package.json  tsconfig.json  vite.config.ts
apps/rhub/: .gitignore  package.json
apps/rhub/src/: router.tsx  styles.css
apps/web/: package.json  tsconfig.json
apps/web/src/: routeTree.gen.ts
tooling/eslint-config/: package.json
tooling/tsconfig/: package.json
updates/: latest-beta.json  latest-stable.json
(+142 files in other folders)
